# tech-curation

./: .gitignore  Dockerfile  Makefile  handler_collect.py  handler_improve.py  pyproject.toml
docs/: aws-setup.md  obsidian-plugins.md  setup-obsidian.md
lambroll/collect/: function.json
lambroll/improve/: function.json
openspec/changes/archive/2026-06-21-langgraph-obsidian-info-agent/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-21-langgraph-obsidian-info-agent/specs/information-collection/: spec.md
openspec/changes/archive/2026-06-21-langgraph-obsidian-info-agent/specs/obsidian-output/: spec.md
openspec/changes/infra-terraform-lambroll/: design.md  proposal.md  tasks.md
openspec/changes/infra-terraform-lambroll/specs/iac-deploy/: spec.md
openspec/specs/feedback-capture/: spec.md
src/tech_curation/: llm.py
src/tech_curation/collect/: graph.py  state.py
src/tech_curation/collect/nodes/: fetch_content.py  github.py  merge_filter.py  plan.py  review.py  revise.py  rss.py  select.py  summarize_format.py
src/tech_curation/config/: settings.py
src/tech_curation/feedback/: parser.py
src/tech_curation/improve/: graph.py  state.py
src/tech_curation/improve/nodes/: analyze_patterns.py  apply_changes.py  generate_changes.py  parse_feedback.py  review_proposal.py  revise_proposal.py
src/tech_curation/obsidian/: report.py  sync.py  templates.py
terraform/: api_gw.tf  ecr.tf  iam.tf  lambda.tf  main.tf  outputs.tf  scheduler.tf  secrets.tf
tests/: test_collect.py  test_improve.py
vault/agent-config/: prompts.md  topics.md
(+1 files in other folders)
