[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-curation"
version = "0.1.0"
description = "LangGraph-based tech information collection and self-improvement agent"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "openai>=1.0",
    "PyGitHub>=2.3",
    "feedparser>=6.0",
    "boto3>=1.34",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
